--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
     const authorizeButton = document.getElementById('authorize-button');
     function authorize(){
         const baseUrl = window.location.origin;
-        redirectUrl = 'https://strava-summariser.vercel.app/getCode'
+        redirectUrl = "https://strava-summariser.vercel.app/getCode"
         // redirectUrl = 'http://localhost/getCode'
         const url = new URL('https://www.strava.com/oauth/authorize');
         url.searchParams.set('client_id', '114698');
