--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,11 @@
         // redirectUrl = 'http://localhost/getCode'
         const url = new URL('https://www.strava.com/oauth/authorize');
         url.searchParams.set('client_id', '114698');
-        url.searchParams.set('redirect_uri', 'https://strava-summariser.vercel.app/getCode');
+        // url.searchParams.set('redirect_uri', 'https://strava-summariser.vercel.app/getCode');
         url.searchParams.set('response_type', 'code');
         url.searchParams.set('approval_prompt', 'auto');
         url.searchParams.set('scope', 'activity:read_all,activity:write'); 
+        url.href += `&redirect_uri=${redirectUrl}`;
 
         window.open(url,'_blank')    
     }
