updating styling of the pages

--- a/templates/code.html
+++ b/templates/code.html
@@ -36,16 +36,18 @@
       padding: 10px 20px;
       font-size: 18px;
       border: none;
-      background-color: #007bff;
+      background-color: #4CAF50; /* Green color */
       color: #fff;
       cursor: pointer;
       transition: background-color 0.3s;
       display: block;
       margin: 0 auto;
+      /* Add the border-radius property */
+      border-radius: 5px; /* Adjust the value for desired roundness */
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #3E8E41; /* Darker green on hover */
     }
 
     .info {
@@ -72,7 +74,7 @@
   <div class="container">
     <h1>Welcome to Strava Summarizer App!</h1>
     <p>Just one step away from summarizing your activities!</p>
-    
+
     <button id="getStartedBtn" onclick="getRefreshCode()">Get Started</button>
 
     <div class="info">
