--- a/templates/code.html
+++ b/templates/code.html
@@ -68,6 +68,22 @@
       font-size: 16px;
       color: #666;
     }
+
+    /* Loading Screen Styles */
+        #loading-screen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 9999;
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            padding-top: 20%;
+        }
   </style>
 </head>
 <body>
@@ -84,8 +100,20 @@
       <p>Stay organized and motivated on your fitness journey with our Strava Summarizer App!</p>
     </div>
   </div>
+
+  <div id="loading-screen">
+    Loading...
+</div>
   <script>
+    function showLoadingScreen() {
+      document.getElementById('loading-screen').style.display = 'block';
+  }
+
+  function hideLoadingScreen() {
+      document.getElementById('loading-screen').style.display = 'none';
+  }
     function getRefreshCode(){
+      showLoadingScreen();
         
         // Get the current URL
         const currentUrl = window.location.href;
