--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
 <body>
   <div class="container">
     <section class="hero">
-      <img class="icon" src="https://miro.medium.com/v2/resize:fit:1080/1*Ho5nE8Legtx0nVaxMEyMqQ.png" alt="Strava logo" style="width: 200px; height: 200px;">
+      <img class="icon" src="https://github.com/Omkar-Jadhav/strava-summariser/blob/440b5b50d74470b2439f77243da56fb8873ec07b/templates/logo/logo.png" alt="Strava logo" style="width: 200px; height: 200px;">
       <h1>Unlock Personalized Insights with Strava Summarizer</h1>
       <p>Effortlessly gain in-depth insights into your Strava activity. We automatically summarize your rides, runs, swims, and yoga sessions in convenient 4-week rolling periods, helping you track progress, identify trends, and stay motivated to achieve your fitness goals!</p>
       <ul class="stats-list">
