updated for without heart rate and with a disclaimer

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,10 +107,18 @@
       <button id="authorize-button" onclick="authorize()">Connect Your Strava Profile</button>
     </section>
   </div>
+  
 
   <div class="created-by">
     <p>Created with ❤️ by <strong>Omkar Jadhav</strong>. A fellow ultra runner with love for running and logging everything on strava!</p>
   </div>
+
+  <!-- Development warning section -->
+  <section class="dev-warning">
+    <strong>Note:</strong> This app is still in development! Personalized suggestions and insights for workouts without heart rate data may come inaccurate. 
+    There may be some bugs in the code, and efforts are being made to resolve them. 
+    Your patience is appreciated!
+  </section>
 
   <script>
     const authorizeButton = document.getElementById('authorize-button');
