Updated the code for generating plan for new user for multiple api calls to avoid timeout issue

--- a/templates/training_qna.html
+++ b/templates/training_qna.html
@@ -177,6 +177,11 @@
         <center>
             <button id="generateButton" onclick="generatePlan()">Generate My Plan! 🚀</button>
         </center>
+
+        <div id="loadingOverlay" style="display:none">
+            <p id="loadingMessage">Preparing to generate your plan...</p>
+        </div>
+        
     </div>
 
 </body>
