--- a/templates/training_landing_pg.html
+++ b/templates/training_landing_pg.html
@@ -59,7 +59,7 @@
             StrideAI helps you train for your personalized running goals, whether it's a marathon, ultra-marathon, or setting a new personal best. Your all-in-one personalized running coach will guide you with weekly training plans, adapting to your progress, challenges, and requests. Let StrideAI be your trusted partner in achieving your running dreams.
         </p>
         <button class="strava-button" onclick="connectStrava()">
-            <img src="static\images\strava logo.png" alt="Strava Logo">
+            <img src="/images/strava logo.png" alt="Strava Logo">
             Connect with Strava
         </button>
     </div>
